<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/club_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/club_info_margin"
        android:text="@string/club_single_component_position"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/club_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/club_info_margin"

        android:text="@string/club_single_component_name"
        app:layout_constraintStart_toEndOf="@+id/club_position"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/club_wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/club_info_margin"


        android:text="@string/club_single_component_wins"
        app:layout_constraintStart_toEndOf="@+id/club_points"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/club_draws"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/club_info_margin"


        android:text="@string/club_single_component_draws"
        app:layout_constraintStart_toEndOf="@+id/club_wins"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/club_losses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/club_info_margin"

        android:text="@string/club_single_component_losses"
        app:layout_constraintStart_toEndOf="@+id/club_draws"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/club_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/club_info_margin"

        android:text="@string/club_single_component_points"
        app:layout_constraintStart_toEndOf="@+id/club_name"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>